--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1> Eid Mubarak ...</h1>
+   <h1> Eid Mubarak ...   </h1>
+   <h2>Eid khatam hogai bhai bas karo ....</h2>
 </body>
 </html>
